--- a/project(300454171)Burnside/Properties/launchSettings.json
+++ b/project(300454171)Burnside/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "groceries",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "project_300454171_Burnside": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "groceries",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
