--- a/project(300454171)Burnside/project300454171Burnside.csproj
+++ b/project(300454171)Burnside/project300454171Burnside.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\GroceryContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
